# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.550 2006/02/02 14:10:59 wolf31o2 Exp $

  02 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc29.

  02 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2:
  Removed extra yaboot.conf from
  livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2.

  01 Feb 2006; Eric Edgar <rocket@gentoo.org>
  targets/support/kill-chroot-pids.sh:
  add sleep to try and give processes a chance to die. bug 119940

  01 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Removed some quotes to make sure we have a binary operator and closing bug
  #117649.

  31 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Added fix for amd64/x86 ISO creation.  This is 2.0_rc28.

  30 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Added path from bug #120935 for PPC/PPC64.

  30 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/stage2_target.py:
  Additional spacing fixes submitted by `Kumba

  29 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py,
  modules/stage2_target.py:
  space cleanups contributed from `Kumba

  29 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  add grp/use to valid_values in the grp module

  29 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc27.

  28 Jan 2006; Eric Edgar <rocket@gentoo.org>
  -livecd/cdtar/yaboot-1.3.11-ppc-cdtar.tar.bz2,
  +livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2,
  targets/support/bootloader-setup.sh:
  ppc cdtar update; ppc64 bootloader updates

  27 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Fixing HFS bless on PPC64.  This is catalyst 2.0_rc26.

  27 Jan 2006; Eric Edgar <rocket@gentoo.org>